@@ -1,3 +1,9 @@
+2016-04-01 Ben Shi <powerstudio1st AT 163 DOT com>
+	* support/regression/tests/gcc-torture-execute-950512-1.c
+	  Enabled.
+	* src/z80/gen.c
+	  Improve longlong comptability on different hosts.
+
 2016-03-31 Philipp Klaus Krause <pkk AT spth.de>
 
 	* doc/sdccman.lyx:
